2002-05-25  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/script.cpp: Changed usage of
          JS_AddRoot/JS_RemoveRoot in the JavaScript binding.

2002-05-22  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/VrmlMatrix.cpp: Doxygen love.

        * java/Makefile.am: Added the generated JNI headers to
          CLEANFILES.

        * src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/ScriptJDK.cpp: Made FieldValue::print
          private.

        * src/openvrml/OpenVRML/field.cpp: Added exception
          specifications to FieldValue classes and much Doxygen love.

        * Doxyfile.in: Set EXTRACT_PRIVATE, HIDE_UNDOC_MEMBERS, and
          HIDE_UNDOC_CLASSES to YES.

2002-05-20  Braden McDaniel  <braden@endoframe.com>

        * Makefile.am, src/Makefile.am: Add optionally built
          directories to EXTRA_DIST.

        * RPM spec file updates.

        * src/openvrml/OpenVRML/proto.h: Microsoft Visual C++ 6.0
          doesn't like friend declarations included with class
          definitions.

        * Overload operator<< and operator>> on FieldValue::Type for
          stream I/O.

2002-05-19  Braden McDaniel  <braden@endoframe.com>

        * Document --with-gl and --with-glut configure options in
          README.

        * Fixed bug in the JavaScript binding where an incompatible
          conversion from a JavaScript value to an OpenVRML::FieldValue
          value was causing an assertion failure. We now report an error
          to stdout.

2002-05-17  Braden McDaniel  <braden@endoframe.com>

        * Enable building without OpenGL and GLUT.

        * Make NodeClass::scene a public member instead of using an
          accessor method.

2002-05-16  Braden McDaniel  <braden@endoframe.com>

        * ScriptJDK.cpp: Updates to compile against JDK 1.4.

        * Eliminated downcast methods from the FieldValue classes.
